fix - apply content-size: border-box to elements with padding that caused overflow

--- a/packages/ui/src/components/ESAlert/ESAlert.module.css
+++ b/packages/ui/src/components/ESAlert/ESAlert.module.css
@@ -1,5 +1,6 @@
 .ESAlert {
   width: 100%;
+  box-sizing: border-box;
 
   --icon-size: var(--esnet-size-touchtarget-min, 32px);
   --section-gap: var(--esnet-size-spacing-medium, 16px);
