--- a/packages/ui/src/components/ESFormSection/ESFormSection.module.css
+++ b/packages/ui/src/components/ESFormSection/ESFormSection.module.css
@@ -1,5 +1,6 @@
 .ESFormSection {
   width: 100%;
+  box-sizing: border-box;
   --section-gap: var(--esnet-size-spacing-xxsmall, 4px);
 
   padding: var(--esnet-size-spacing-medium);
