--- a/packages/ui/src/components/ESModule/ESModule.module.css
+++ b/packages/ui/src/components/ESModule/ESModule.module.css
@@ -1,5 +1,6 @@
 .ESModule {
   width: 100%;
+  box-sizing: border-box;
   padding: 0 var(--esnet-size-spacing-medium, 16px);
 
   @media (min-width: 640px) {
