--- a/packages/ui/src/components/ESTitleSection/ESTitleSection.module.css
+++ b/packages/ui/src/components/ESTitleSection/ESTitleSection.module.css
@@ -1,5 +1,6 @@
 .titleLayout {
   width: 100%;
+  box-sizing: border-box;
   margin-bottom: var(--esnet-size-spacing-large);
 
   .title {
